--- a/RandomScaleMachine/app/build.gradle
+++ b/RandomScaleMachine/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.core:core-ktx:+'
     implementation 'androidx.room:room-common:2.5.1'
+    implementation "com.google.dagger:hilt-android:2.38.1"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
