Reset build path

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -38,4 +38,4 @@ jobs:
 
       # Run Build Project
       - name: Build gradle project
-        run: ./RandomScaleMachine/gradlew build
+        run: gradlew build
