--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -2,7 +2,7 @@ name: Android CI
 
 env:
   # The name of the main module repository
-  main_project_module: ./RandomScaleMachine/app
+  main_project_module: app
 
 on:
   # Triggers the workflow on push or pull request events but only for default and protected branches
@@ -38,4 +38,4 @@ jobs:
 
       # Run Build Project
       - name: Build gradle project
-        run: gradlew build
+        run: ./RandomScaleMachine/gradlew build
