--- a/RandomScaleMachine/app/build.gradle
+++ b/RandomScaleMachine/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -62,6 +64,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:+'
     implementation 'androidx.room:room-common:2.5.1'
     implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.3.7'
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation "androidx.room:room-ktx:2.5.1"
     kapt "androidx.room:room-compiler:2.5.1"
